<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="140dp"
    tools:context="com.example.owner.financialtracking.LoginActivity">
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <EditText
        android:id="@+id/Email"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="116dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="185dp" />

    <Button
        android:id="@+id/Login"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="Login"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="247dp" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:text="Rgister"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="317dp" />
</LinearLayout>
